# SWARMS

./: README.md
robo/src/ros2_learners/TaskAllocation/: TaskAllocationNode.py  dqn_9.keras  la.py  script.py  taskallocation.py
robo/src/ros2_learners/install/: local_setup.sh  setup.sh
robo/src/ros2_learners/install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
robo/src/ros2_learners/llm/logs/: TaskObjects.json
robo/src/ros2_learners/llm/scripts/: run_llm.py
robo/src/ros2_learners/log/: latest_build
robo/src/ros2_learners/logs/: PromtObject.json  TaskObjectLocation.json  TaskObjectWithAllocation.json  list.json  robot_positions.json
robo/src/ros2_learners/my_robot_controller/: setup.py
robo/src/ros2_learners/my_robot_controller/my_robot_controller/: keras_ddpg.py  updated_keras_ddpg.py
robo/src/ros2_learners/pc/: package.xml  setup.cfg  setup.py
robo/src/ros2_learners/pc/pc/: pointnet_model.py
robo/src/ros2_learners/point_cloud_perception/launch/: 3d_depth_mapping_rtab10.launch.py  3d_depth_mapping_rtab15.launch.py  3d_depth_mapping_rtab2.launch.py  3d_depth_mapping_rtab3.launch.py  3d_depth_mapping_rtab4.launch.py  3d_depth_mapping_rtab5.launch.py  3d_depth_mapping_rtab7.launch.py  3d_depth_mapping_rtab8.launch.py  3d_depth_mapping_rtab9.launch.py
robo/src/ros2_learners/turtlebot3_gazebo/launch/: turtlebot3_world.launch.py
robo/src/ros2_learners/turtlebot3_gazebo/urdf/: turtlebot3_waffle.urdf
robo/src/ros2_learners/turtlebot3_gazebo/worlds/: RL (copy).world  RL.world  Storage_rack.world  final.world  final_new.world  (+1 more)
(+365 files in other folders)
